fix: disable horizontal scrolling on all pages

--- a/src/assets/styles/page.scss
+++ b/src/assets/styles/page.scss
@@ -39,7 +39,8 @@
       flex: 1 1 100%;
       width: 100%;
       height: 100%;
-      overflow: auto;
+      overflow-x: hidden;
+      overflow-y: auto;
       padding: 12px 0;
       box-sizing: border-box;
       scrollbar-gutter: stable;
